# example

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  prefix.cmake
cmake/: FindGFlags.cmake  FindLibgonet.cmake  FindLibuv.cmake  FindZmq.cmake
gateway/: Acceptor.cpp  Acceptor.h  Auth.hpp  Backend.cpp  Backend.h  BackendMgr.cpp  BackendMgr.h  Buffer.h  CMakeLists.txt  Client.cpp  Client.h  ClientMgr.cpp  ClientMgr.h  GwServer.cpp  GwServer.h  Handler.cpp  Handler.h  QQAuth.cpp  QQAuth.h  Server.cpp  Server.h  Server.hpp  app_id.cpp  app_id.h  handler.hpp  log.h  main.cpp  noncopyable.hpp  stdex.h
gateway/cfg_desc/: gateway.proto
gateway/protocol/: cs_gateway.proto  cs_gateway_utility.cpp  cs_gateway_utility.h  cs_gateway_utlity.h  ss_gateway_utility.cpp  ss_gateway_utility.h
runtime/gateway/cfg/: gateway.json
tutorial/: CMakeLists.txt  gateway_backend.cpp  uvactor_echo_svr.cpp
tutorial/backend/: CMakeLists.txt  gateway_backend.cpp
tutorial/client/: CMakeLists.txt  tcpclient4.cpp
uvactor/: Acceptor.cpp  Acceptor.h  Connection.cpp  Connection.h  Log.h  Net.hpp  Server.h
uvcurl/: CMakeLists.txt  Multi.cpp  Multi.h  memory.h  uvcurl.h
uvcurlpp/: CMakeLists.txt  Multi.cpp  Multi.h  memory.h  uvcurlpp.h
uvpp/: callback.hpp  error.hpp  fsevent.hpp  fspoll.hpp  handle.hpp  idle.hpp  loop.hpp  net.hpp  pipe.hpp  poll.hpp  request.hpp  signal.hpp  stream.hpp  tcp.hpp  timer.hpp  tty.hpp  work.hpp
worldd/: CMakeLists.txt  Server.cpp  Server.h  Server.hpp  main.cpp
